--- a/Ordventure/index.html
+++ b/Ordventure/index.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Choose your own adventure game v1.0</title>
+         <link rel="stylesheet" href="style.css">
         <script type="text/javascript" src="game.js"></script>
     </head>
     <body>
