--- a/Ordventure/index.html
+++ b/Ordventure/index.html
@@ -8,6 +8,7 @@
         <script type="text/javascript" src="game.js"></script>
     </head>
     <body>
-    something either didn't work, or you just reached the end.
+    <p>something either didn't work, or you just reached the end.</p>
+        <img src=political.jpg>
     </body>
 </html>
