--- a/New things [HTML]/thing.html
+++ b/New things [HTML]/thing.html
@@ -4,7 +4,7 @@
         <title>Yeehaw yeenaw</title>
 </head>
 <body>
-<h2>Did you know that Mac is objectively better than Windows 8?</h2>
+<h2>Did you know that the earth isn't round? It's actually a giant donut.</h2>
 
 <p>yeehaw</p>
 
