--- a/CSS Exersizes/index.html
+++ b/CSS Exersizes/index.html
@@ -98,11 +98,16 @@
                 font-family: "Pixeltype", sans-serif;
                 font-size: 50px;
                 text-align: center;
-                transition: 0.05s;
+                transition: 0.1s;
             }
             div#button:hover{
                 background-color:#FFFFFF;
                 color:#3e3e3e;
+                width:700px;
+            
+            }
+            div#button:active{
+                
             }
         </style>
     </head>
