--- a/CSS Exercises/index.html
+++ b/CSS Exercises/index.html
@@ -112,6 +112,8 @@
             }
             div#button:active{
                 background-color:orange;
+                box-shadow: 0px 0px 36px orange;
+                color:#FFFFFF;
             }
         </style>
     </head>
