I did something i think
but that's up for debate

--- a/CSS Exercises/index.html
+++ b/CSS Exercises/index.html
@@ -27,7 +27,7 @@
             h3{
                 color:#ffe67c;
                 font-family: "Nintendo DS Bios", sans-serif;
-                font-size:28px;
+                font-size:28px;https://youtu.be/kLssmG_vFhg
                 margin-left: 20px;
             }
             div#square{
