oooh boy I did a lot.
Like actually made it look good and also formatting yee yee

--- a/Mobile App/index.html
+++ b/Mobile App/index.html
@@ -11,16 +11,19 @@
     </head>
     <body>
     <div id="container">
-        <header>EEEEEEEEEEEE</header>
+        <header>
+            <h1>Random app pre-alpha early access preview</h1>
+        </header>
         <div id="content">
-        
+        <h3>Home</h3>
+        <p>Oh hey there's text here yeeeeeehaw</p>
         </div>
         <nav id="nav">
         <ul>
-            <li>Home</li>
-            <li>Products</li>
-            <li>Favorites</li>
-            <li>Contacts</li>
+            <li><a href="a">Home</a></li>
+            <li><a href="a">Products</a></li>
+            <li><a href="a">Favorites</a></li>
+            <li><a href="a">Contacts</a></li>
         </ul>
         </nav>
         <footer>
