--- a/Mobile App/index.html
+++ b/Mobile App/index.html
@@ -25,6 +25,7 @@
             <li><a href="a">Favorites</a></li>
             <li><a href="a">Contacts</a></li>
         </ul>
+            <div class="keepOpen"></div>
         </nav>
         <footer>
         
