i did something i think

--- a/Mobile App/fav.html
+++ b/Mobile App/fav.html
@@ -15,8 +15,8 @@
             <h1>Random app pre-alpha early access preview</h1>
         </header>
         <div id="content">
-        <h3>Home</h3>
-        <p>Oh hey there's text here yeeeeeehaw</p>
+        <h3>Favorites</h3>
+        <p>Dad-gummit you really likin' those pictures</p>
         </div>
         <nav id="nav">
         <ul>
