--- a/Mobile App/images.html
+++ b/Mobile App/images.html
@@ -15,8 +15,8 @@
             <h1>Random app pre-alpha early access preview</h1>
         </header>
         <div id="content">
-        <h3>Home</h3>
-        <p>Oh hey there's text here yeeeeeehaw</p>
+        <h3>Images</h3>
+        <p>Hoo boy lookit those photo-graphs!</p>
         </div>
         <nav id="nav">
         <ul>
@@ -25,6 +25,15 @@
             <li><a href="fav.html">Favorites</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
+            
+            <img src="mcquan\mc1.jpg" id="mc">
+            <img src="mcquan\mc2.jpg" id="mc">
+            <img src="mcquan\mc3.jpg" id="mc">
+            <img src="mcquan\mc4.jpg" id="mc">
+            <img src="mcquan\mc5.jpg" id="mc">
+            <img src="mcquan\mc6.jpg" id="mc">
+            <img src="mcquan\mc7.jpg" id="mc">
+            <img src="mcquan\mc8.jpg" id="mc">
             <div class="keepOpen"></div>
         </nav>
         <footer>
