--- a/Mobile App/contact.html
+++ b/Mobile App/contact.html
@@ -10,16 +10,28 @@
     <body>
     <div id="container">
         <header>
-            <h1>What do you think you're doing?</h1>
-           
+            <h1>Contacts page</h1>
         </header>
+        <h3>You can try to talk to me here</h3>
+        <p>But don't try and get me to tell you the recipe for egg-chicken sauce, i'll break your knees</p>
+        <nav>
         <ul>
-        <li><a href="index.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="images.html">Images</a></li>
+            <li><a href="fav.html">Favorites</a></li>
+            <li id="here"><a href="contact.html">Contact</a></li>
         </ul>
+
         <body>
-         <audio autoplay loop>
-        <source src=spork.mp3 type=audio/mpeg>
-        </audio>
+        <div id="content">
+        <fieldset>
+            <legend>Contact mee:</legend>
+            <span>First Name:</span>
+            <br>
+            <span>Email Address:</span>
+            <br>
+            </fieldset>
+            </div>
         </body>
             <div class="keepOpen"></div>
         </nav>
