--- a/Mobile App/images.html
+++ b/Mobile App/images.html
@@ -21,7 +21,7 @@
         <nav id="nav">
         <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="images.html">Images</a></li>
+            <li id="here"><a href="images.html">Images</a></li>
             <li><a href="fav.html">Favorites</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
