--- a/Mobile App/index.html
+++ b/Mobile App/index.html
@@ -20,13 +20,18 @@
         </div>
         <nav id="nav">
         <ul>
-            <li><a href="index.html">Home</a></li>
+            <li id="here"><a href="index.html">Home</a></li>
             <li><a href="images.html">Images</a></li>
             <li><a href="fav.html">Favorites</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
             <div class="keepOpen"></div>
         </nav>
+        <h1 id="main">
+            Why hello there, welcome to my app!
+            From here you can access the infinitely useful features made available to you.
+        
+            </h1>
         <footer>
         
         </footer>
