--- a/Mobile App/contact.html
+++ b/Mobile App/contact.html
@@ -18,7 +18,7 @@
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="images.html">Images</a></li>
-            <li><a href="fav.html">Favorites</a></li>
+            <li><a href="fav.html">Game</a></li>
             <li id="here"><a href="contact.html">Contact</a></li>
         </ul>
 
