--- a/Mobile App/fav.html
+++ b/Mobile App/fav.html
@@ -15,21 +15,26 @@
             <h1>Random app pre-alpha early access preview</h1>
         </header>
         <div id="content">
-        <h3>Favorites</h3>
-        <p>Dad-gummit you really likin' those pictures</p>
+        <h3>Game</h3>
+        <p>Recycling is good for the environment.</p>
         </div>
         <nav id="nav">
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="images.html">Images</a></li>
-            <li id="here"><a href="fav.html">Favorites</a></li>
+            <li id="here"><a href="fav.html">Game</a></li>
             <li><a href="contact.html">Contact</a></li>
+                    <audio autoplay loop>
+        <source src = MOP.wav type = audio/mpeg>
+        </audio>
+                     <script type="text/javascript" src="javascript\game.js"></script>
         </ul>
             <div class="keepOpen"></div>
         </nav>
         <footer>
-        
+
         </footer>
         </div>
+
     </body>
 </html>
