--- a/Mobile App/images.html
+++ b/Mobile App/images.html
@@ -16,13 +16,13 @@
         </header>
         <div id="content">
         <h3>Images</h3>
-        <p>Hoo boy lookit those photo-graphs!</p>
+        <p>This is my personal collection</p>
         </div>
         <nav id="nav">
         <ul>
             <li><a href="index.html">Home</a></li>
             <li id="here"><a href="images.html">Images</a></li>
-            <li><a href="fav.html">Favorites</a></li>
+            <li><a href="fav.html">Game</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
             
