--- a/Mobile App/index.html
+++ b/Mobile App/index.html
@@ -22,7 +22,7 @@
         <ul>
             <li id="here"><a href="index.html">Home</a></li>
             <li><a href="images.html">Images</a></li>
-            <li><a href="fav.html">Favorites</a></li>
+            <li><a href="fav.html">Game</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
             <div class="keepOpen"></div>
